hphp/hack/test/typecheck/ffp/function_final_bad.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

async final function foo(): void {
}
